<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.kfreiholtz.mywishlist.userinterfaces.NewListActivity"
    android:background="@color/wish_list_light_blue">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eventField"
        android:hint="@string/hint_event_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/universal_text_margin"
        android:layout_marginLeft="@dimen/universal_text_margin"
        android:layout_marginRight="@dimen/universal_text_margin"
        android:inputType="textCapSentences"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listTypeSpinner"
        android:layout_below="@+id/eventField"
        android:layout_alignStart="@+id/eventField"
        android:layout_alignEnd="@+id/eventField"
        android:layout_alignLeft="@+id/eventField"
        android:layout_alignRight="@+id/eventField" />

    <Button
        android:id="@+id/newItemButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_item_button"
        android:background="@color/wish_list_blue"
        android:textColor="@android:color/white"
        android:layout_below="@+id/listTypeSpinner"
        android:layout_alignStart="@+id/eventField"
        android:layout_alignEnd="@+id/eventField"
        android:layout_alignLeft="@+id/eventField"
        android:layout_alignRight="@+id/eventField"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@android:id/list"
        android:layout_below="@+id/newItemButton"
        android:layout_marginTop="@dimen/universal_text_margin"
        android:layout_marginLeft="@dimen/universal_text_margin"
        android:layout_marginRight="@dimen/universal_text_margin"/>

    <TextView
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_item_label"
        android:layout_below="@+id/newItemButton"
        android:layout_marginTop="@dimen/universal_text_margin"
        android:layout_alignStart="@+id/eventField"
        android:layout_alignEnd="@+id/eventField"
        android:layout_alignLeft="@+id/eventField"
        android:layout_alignRight="@+id/eventField"/>

</RelativeLayout>
